# SegmentIntersection

./: .gitignore  CMakeLists.txt  README.md
include/: intersection.h  segment3d.h  vector3d.h
src/: intersection.cpp  main.cpp  segment3d.cpp  vector3d.cpp
tests/: CMakeLists.txt  test_intersection.cpp  test_segment3d.cpp  test_vector3d.cpp
